<resources>
    <string name="app_name">MiniProject</string>
    <string name="todo" />
    <string name="register_to_create_an_account" />
    <string name="name" />
    <string name="message" />
    <string name="send" />
    <string name="reg_no" />
    <string name="mobno" />
    <string name="email" />
    <string name="ways_i_csan_help_you_with">Ways i csan help you with</string>
    <string name="navigaton_open">Open Navigation drwer</string>
    <string name="navigaton_close">Close Navigation drwer</string>
    <string name="tilth_condition_of_the_soil_when_the_soil_is_neither_too_wet_nor_too_dry_dig_a_hole_6_to_10_inches_deep_separate_an_intact_section_about_the_size_of_a_soup_can_and_break_it_apart_with_your_fingers_determine_whether_the_soil_is_cloddy_powdery_or_granular_ideally_your_soil_should_be_made_up_of_different_sized_crumbs_that_will_hold_their_shape_under_slight_pressure_crumbs_or_aggregates_as_soil_scientists_call_them_that_break_apart_only_with_difficulty_mean_your_soil_is_too_hard_soil_that_s_easy_to_work_allows_water_to_reach_roots_efficiently_and_is_less_prone_to_compaction">Tilth (condition of the soil) When the soil is neither too wet nor too dry, dig a hole 6 to 10 inches deep. Separate an intact section about the size of a soup can and break it apart with your fingers. Determine whether the soil is cloddy, powdery, or granular. Ideally, your soil should be made up of different sized crumbs that will hold their shape under slight pressure. Crumbs, or aggregates, as soil scientists call them, that break apart only with difficulty mean your soil is too hard. Soil that\'s easy to work allows water to reach roots efficiently and is less prone to compaction.</string>
    <string name="observation">OBSERVATION</string>
    <string name="with_a_shovel_or_hand_trowel_gently_dig_around_a_selected_plant_preferably_a_weed_you_won_t_miss_once_you_ve_reached_root_depth_pull_an_annual_plant_up_and_check_the_extent_of_root_development_searching_for_fine_strands_with_a_white_healthy_appearance_brown_mushy_roots_indicate_serious_drainage_problems_and_a_poor_outlook_for_this_year_s_harvest_stunted_roots_might_also_indicate_disease_or_the_presence_of_root_gnawing_pests_roots_have_the_most_immediate_connection_with_and_reliance_on_soil_quality_without_air_water_biological_activity_and_crumbly_soil_to_grow_in_roots_can_t_do_their_job">With a shovel or hand trowel, gently dig around a selected plant, preferably a weed you won\'t miss. Once you\'ve reached root depth, pull an annual plant up and check the extent of root development, searching for fine strands with a white healthy appearance. Brown, mushy roots indicate serious drainage problems—and a poor outlook for this year\'s harvest. Stunted roots might also indicate disease or the presence of root-gnawing pests. Roots have the most immediate connection with and reliance on soil quality. Without air, water, biological activity, and crumbly soil to grow in, roots can\'t do their job.</string>
    <string name="rub_some_moist_soil_between_fingers_n_t_t1_sand_feels_gritty_n_t_t2_silt_feels_smooth_n_t_t3_clays_feel_sticky">Rub some moist soil between fingers. \n \t\t1.)Sand feels gritty. \n \t\t2.)Silt feels smooth. \n \t\t3.)Clays feel sticky</string>
    <string name="squeeze_a_moistened_ball_of_soil_out_between_thumb_and_fingers_n_ribbons_less_than_1_inch_n_t_t_t_feels_gritty_coarse_texture_sandy_soil_n_t_t_t_not_gritty_feeling_medium_texture_soil_high_in_silt_n_n_ribbons_1_to_2_inches_n_t_t_t_feels_gritty_medium_texture_soil_n_t_t_t_not_gritty_feeling_fine_texture_soil_n_n_ribbons_greater_than_2_inches_fine_texture_clay_soil">Squeeze a moistened ball of soil out between thumb and fingers. \n :- Ribbons less than 1 inch \n\t\t\t*Feels gritty = coarse texture (sandy) soil \n\t\t\t*Not gritty feeling = medium texture soil high in silt \n\n:- Ribbons 1 to 2 inches \n\t\t\t *Feels gritty = medium texture soil \n\t\t\t *Not gritty feeling = fine texture soil \n\n:- Ribbons greater than 2 inches = fine texture (clay) soil</string>
    <string name="soil_texture_by_feel_physical_do_you_have_sandy_clay_or_loamy_soil_this_physical_characteristic_is_one_of_the_more_useful_and_often_the_basis_for_future_decisions_regarding_your_soil">Soil Texture by Feel (Physical): Do you have sandy, clay, or loamy soil? This physical characteristic is one of the more useful and often the basis for future decisions regarding your soil.</string>
    <string name="the_ph_acidity_level_of_your_soil_significantly_affects_how_well_your_plants_grow_most_plants_grow_best_in_soil_with_a_fairly_neutral_ph_between_six_and_seven_the_u_s_department_of_agriculture_says_soil_testing_is_an_essential_tool_that_provides_information_on_fertility_and_ph_testing_also_indicates_what_and_how_much_you_should_add_to_perk_up_tired_soil">The pH (acidity level) of your soil significantly affects how well your plants grow. Most plants grow best in soil with a fairly neutral pH, between six and seven. The U.S. Department of Agriculture says soil testing is an “essential” tool that provides information on fertility and pH. Testing also indicates what and how much you should add to perk up tired soil.</string>
    <string name="purchase_a_home_soil_test_ph_meter_you_can_buy_diy_soil_testing_kits_and_probes_online_at_hardware_stores_or_at_garden_centers_costs_range_from_300_up_to_1000_for_more_elaborate_setups_n_n_ph_meter_approx_300_1000_stick_a_probe_into_the_soil_and_it_registers_ph_on_an_attached_meter_n_n_ph_soil_tester_300_1000_mix_soil_with_water_pour_into_a_plastic_container_add_powder_from_capsule_and_shake_compare_the_color_of_water_to_the_adjacent_color_scale_which_indicates_the_ph_n_n_soil_test_kit_300_1000_same_as_the_ph_tester_only_it_adds_three_extra_containers_and_capsules_to_measure_nitrogen_phosphorus_and_potash_note_no_need_to_test_for_nitrogen_because_it_moves_in_and_out_of_soil_so_quickly_that_testing_would_be_meaningless">Purchase a home soil test/pH meter You can buy DIY soil-testing kits and probes online, at hardware stores or at garden centers. Costs range from ₹300 up to ₹1000 for more elaborate setups. \n\n‣ pH meter (approx. ₹300-₹1000): Stick a probe into the soil, and it registers pH on an attached meter. \n\n‣ pH soil tester (₹300-₹1000): Mix soil with water; pour into a plastic container, add powder from capsule, and shake. Compare the color of water to the adjacent color scale, which indicates the pH. \n\n‣ Soil test kit ₹300-₹1000: Same as the pH tester, only it adds three extra containers and capsules to measure nitrogen, phosphorus, and potash. (Note: no need to test for nitrogen because it moves in and out of soil so quickly that testing would be meaningless).</string>
    <string name="home_test_your_garden_soil_ph_with_vinegar_and_baking_soda_n_n1_collect_one_cup_of_soil_from_the_part_of_your_garden_you_want_to_test_n_n2_put_one_teaspoon_of_soil_into_each_of_two_separate_containers_n_n3_add_1_2_cup_of_vinegar_to_one_container_of_the_soil_if_it_fizzes_you_have_alkaline_soil_with_a_ph_between_7_and_8_if_it_doesn_t_fizz_after_doing_the_vinegar_test_n_n4_add_distilled_water_to_the_other_container_until_the_soil_is_muddy_n_n5_add_1_2_cup_baking_soda_if_it_fizzes_you_have_acidic_soil_most_likely_with_a_ph_between_5_and_6_n_n6_if_your_soil_doesn_t_react_at_all_it_is_neutral_with_a_ph_of_7_and_you_are_very_lucky">Home test your garden soil pH with vinegar and baking soda \n\n1. Collect one cup of soil from the part of your garden you want to test. \n\n2. Put one teaspoon of soil into each of two separate containers. \n\n3. Add 1/2 cup of vinegar to one container of the soil. If it fizzes, you have alkaline soil, with a pH between 7 and 8. If it doesn’t fizz after doing the vinegar test, \n\n4. Add distilled water to the other container until the soil is muddy. \n\n5. Add 1/2 cup baking soda. If it fizzes you have acidic soil, most likely with a pH between 5 and 6. \n\n6. If your soil doesn’t react at all it is neutral with a pH of 7 and you are very lucky!</string>
    <string name="n_nthe_purchased_kits_and_home_test_can_tell_you_toward_which_end_of_the_soil_ph_scale_your_soil_is_leaning_but_for_an_exact_measurement_you_will_need_to_send_a_soil_sample_out_to_a_lab_for_testing">\n\nThe purchased kits and home test can tell you toward which end of the soil pH scale your soil is leaning, but for an exact measurement, you will need to send a soil sample out to a lab for testing.</string>
    <string name="soil_aggregate_stability_is_widely_recognized_as_a_key_indicator_of_soil_quality_and_health_a_valuable_tool_for_quantifying_soil_stability_a_stability_kit_can_be_inexpensively_and_easily_assembled_with_minimal_tools_n_nthe_slake_test_measures_the_stability_of_soil_when_exposed_to_rapid_wetting_and_should_be_measured_on_air_dried_soil_fragments_or_aggregates_peds_n_nthere_are_affordable_kits_which_allow_for_rapid_data_collection_and_easy_field_evaluation_of_relatively_undisturbed_soil_samples">Soil aggregate stability is widely recognized as a key indicator of soil quality and health. A valuable tool for quantifying soil stability, a stability kit can be inexpensively and easily assembled with minimal tools. \n\nThe slake test measures the stability of soil when exposed to rapid wetting. and should be measured on air-dried soil fragments or aggregates (peds). \n\nThere are affordable kits which allow for rapid data collection and easy field evaluation of relatively undisturbed soil samples.</string>
    <string name="n_two_clear_jars_at_least_32oz_n_two_1_4_mesh_wire_screens_cut_to_fit_onto_top_of_jars_n_dried_soil_peds">\n Two clear jars at least 32oz; \n Two 1/4” mesh wire screens cut to fit onto top of jars; \n Dried soil peds.</string>
    <string name="n3_find_two_clear_jars_large_enough_to_hold_the_chunks_of_soil_n_n4_put_together_some_type_of_wire_mesh_that_you_can_hook_at_the_top_of_each_jar_that_will_allow_the_soil_to_be_submerged_in_the_water_yet_be_held_within_the_top_half_of_the_jar_n_n5_insert_the_wire_meshes_into_each_jar_n_n6_fill_the_jars_with_water_n_n7_at_the_same_time_submerge_the_tilled_sample_in_one_jar_and_the_untilled_sample_in_the_other_n_n8_watch_to_see_which_soil_holds_together_and_which_one_falls_apart_the_soil_with_poor_structure_is_the_one_that_will_begin_to_fall_apart">\n3. Find two clear jars large enough to hold the chunks of soil. \n\n4. Put together some type of wire mesh that you can hook at the top of each jar that will allow the soil to be submerged in the water, yet be held within the top half of the jar. \n\n5. Insert the wire meshes into each jar. \n\n6. Fill the jars with water. \n\n7. At the same time, submerge the tilled sample in one jar, and the untilled sample in the other. \n\n8. Watch to see which soil holds together and which one falls apart. The soil with poor structure is the one that will begin to fall apart.</string>
    <string name="nthe_slake_test_compares_two_chunks_of_topsoil_in_water_to_see_how_well_and_how_long_they_will_hold_together_here_are_the_steps_n_n1_collect_a_chunk_of_topsoil_a_size_that_would_fit_in_your_hand_from_an_area_where_you_don_t_till_like_a_fencerow_or_a_plot_you_ve_no_tilled_or_had_in_grass_for_many_years_n_n2_get_a_second_spade_full_or_chunk_of_soil_from_a_plot_you_ve_tilled_consistently_it_should_be_the_same_soil_type_as_the_first_sample">\nThe slake test compares two chunks of topsoil in water to see how well and how long they will hold together. Here are the steps: \n\n1. Collect a chunk of topsoil––a size that would fit in your hand––from an area where you don’t till, like a fencerow, or a plot you’ve no-tilled or had in grass for many years. \n\n2. Get a second spade-full or chunk of soil from a plot you’ve tilled consistently. It should be the same soil type as the first sample.</string>
</resources>